[package]
name = "cao-messages"
version = "0.1.0"
authors = ["Daniel Kiss <littlesnorrboy@gmail.com>"]
edition = "2018"

build="build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# uuid = { version = "0.8", features=["serde"] }

capnp="*"


[build-dependencies]
capnpc="*"
